- Fixed bug #37514 (strtotime doesn't assume year correctly). (Derick)
- Fixed bug #37510 (session_regenerate_id changes session_id() even on 
  failure). (Hannes)
- Fixed bug #37505 (touch() truncates large files). (Ilia)
- Fixed bug #37499 (CLI segmentation faults during cleanup with sybase-ct 
  extension enabled). (Tony)
- Fixed bug #37487 (oci_fetch_array() array-type should always default to
  OCI_BOTH). (Tony)
- Fixed bug #37395 (recursive mkdir() fails to create nonexistent directories 
  in root dir). (Tony)
- Fixed bug #37457 (Crash when an exception is thrown in accept() method of 
  FilterIterator). (Marcus)
- Fixed bug #37456 (DOMElement->setAttribute() loops forever). (Rob)
- Fixed bug #37428 (PHP crashes on windows if there are startup errors
  and event log is used for logging them). (Edin)
- Fixed bug #37418 (tidy module crashes on shutdown). (Tony)
- Fixed bug #37416 (iterator_to_array() hides exceptions thrown in rewind()
  method). (Tony)
- Fixed bug #37413 (Rejected versions of flex that don't work). (Ilia)
- Fixed bug #37394 (substr_compare() returns an error when offset equals 
  string length). (Ilia)
- Fixed bug #37392 (Unnecessary call to OCITransRollback() at the end of 
  request). (Tony)
- Fixed bug #37376 (fastcgi.c compile fail with gcc 2.95.4). (Ilia)
- Fixed bug #37368 (Incorrect timestamp returned for strtotime()). (Derick)
- Fixed bug #37348 (make PEAR install ignore open_basedir). (Ilia)
- Fixed bug #37341 ($_SERVER in included file is shortened to two entries,
  if $_ENV gets used). (Dmitry)
- Fixed bug #37313 (sigemptyset() used without including <signal.h>).
  (jdolecek)
- Fixed bug #37306 (max_execution_time = max_input_time). (Dmitry)
- Fixed bug #37256 (php-fastcgi dosen't handle connection abort). (Dmitry)
- Fixed bug #37244 (Added strict flag to base64_decode() that enforces 
  RFC3548 compliance). (Ilia)
- Fixed bug #36630 (umask not reset at the end of the request). (Ilia)